# CodeKAVI

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  docker-compose.yml  implementation_plan.md  production_pipeline_guide.txt
.github/workflows/: ci.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  main.py  output.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_embed.py  test_ts.py
backend/codekavi/: __init__.py  analyzer.py  auth.py  cache.py  classifier.py  cloner.py  config.py  exceptions.py  file_selector.py  fingerprint.py  graph.py  indexer.py  limiter.py  logging_config.py  metrics.py  normalizer.py  orchestrator.py  quota.py  repo_source.py  schemas.py  session.py  settings.py  tour_generator.py  traverser.py  utils.py  vectorstore.py
backend/codekavi/llm/: __init__.py  explainer.py  prompts.py  providers.py
backend/codekavi/routes/: __init__.py  analyze.py  chat.py  dependencies.py  explain.py  export.py  visualize.py
backend/tests/: conftest.py  eval_setup.py  test_analyzer.py  test_api.py  test_cache.py  test_classifier.py  test_classifier_accuracy.py  test_cloner.py  test_concurrency.py  test_file_selector.py  test_graph.py  test_normalizer.py  test_quota.py  test_tour_generator.py
backend/tests/fixtures/classifier_eval/: ground_truth.json
backend/tests/fixtures/sample_repo/: README.md  config.py  main.py
backend/tests/fixtures/sample_repo/cmd/: main.go
backend/tests/fixtures/sample_repo/src/: api.ts  index.js  utils.js
backend/tests/fixtures/sample_repo/tests/: test_helpers.py
backend/tests/fixtures/sample_repo/utils/: __init__.py  helpers.py
frontend/: Dockerfile  index.html  lint_output.txt  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  script.js  style.css  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: AnalysisProgress.tsx  ChatPanel.tsx  CodeRefCard.tsx  RepoProvider.tsx  Sidebar.tsx  TopNav.tsx  WelcomeScreen.tsx
frontend/hooks/: useExplanation.ts  useSSE.ts  useVisualization.ts
frontend/lib/: api.ts  auth-context.tsx  downloadUtils.ts  mockData.ts  sessions.ts  supabase-server.ts  supabase.ts
frontend/src/: App.tsx  index.css  main.tsx
(+58 files in other folders)
