[project]
name = "codekavi"
version = "0.2.0"
description = "AI-powered codebase intelligence platform"
requires-python = ">=3.12"

# ─────────────────────────────────────────
# Ruff — lint + format (replaces flake8, isort, black)
# ─────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["codekavi", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
    "N805",   # first argument of a method should be named 'self' (pydantic validators)
    "UP007",  # use X | Y for union types — keep Optional for readability in some cases
    "SIM108", # use ternary operator — sometimes if/else is clearer
]

[tool.ruff.lint.isort]
known-first-party = ["codekavi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ─────────────────────────────────────────
# mypy — type checking (lenient start)
# ─────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

# ─────────────────────────────────────────
# pytest
# ─────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=tests/fixtures/"

# ─────────────────────────────────────────
# coverage
# ─────────────────────────────────────────
[tool.coverage.run]
source = ["codekavi"]
omit = [
    "codekavi/llm/prompts.py",  # prompt templates, not logic
    "codekavi/routes/export.py", # placeholder stubs
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0  # start at 0, raise to 80 after Phase 4
